# LifeOS

./: .gitignore  CLAUDE.md  README.md
api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_init.py  0002_photo_enc.py  0003_capture_idempotency.py  0004_auth.py  0005_photo_created_at.py  0006_withings.py  0007_body_metrics_dedupe_by_time.py
api/app/: ai.py  auth.py  config.py  db.py  main.py  models.py  normalize.py  procrastinate_app.py  schemas.py  storage.py  vision.py  withings.py
api/app/routers/: auth.py  capture.py  photos.py  timeline.py  withings.py
docs/: ARCHITECTURE.md  DECISIONS.md  DEPLOY.md  FEATURE-CATALOG.md  PHASES.md
docs/research/: architecture-review.md  cloudflare-r2-setup.md  gemini-image-pipeline.md  landscape.md  reader3-epub.md  stack-grounding.md  withings-api.md
web/: Caddyfile  Dockerfile  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  Auth.tsx  PhotoComposer.tsx  Withings.tsx  index.css  main.tsx
web/src/lib/: api.ts  auth.ts  db.ts  http.ts  image.ts  withings.ts
worker/: Dockerfile  pyproject.toml  withings.py  worker.py
