[project]
name = "lifeos-api"
version = "0.1.0"
description = "LifeOS backend — FastAPI + DSPy (over OpenRouter)"
requires-python = ">=3.13"
dependencies = [
  "fastapi[standard]==0.136.3",
  "pydantic==2.13.4",
  "pydantic-settings>=2.7",
  "sqlalchemy[asyncio]==2.0.50",
  "psycopg[binary]>=3.2",
  "alembic==1.18.4",
  "pgvector==0.4.2",
  "dspy==3.2.1",
  "openai>=1.54",        # OpenRouter image-gen / OpenAI-compatible calls
  "voyageai>=0.3",       # Voyage 4 embeddings (lazy)
  "boto3>=1.35",         # Cloudflare R2 (S3-compatible)
  "cryptography>=43",    # AES-256-GCM for sensitive media
  "procrastinate>=3.8",  # shared enqueue helpers; the worker service runs it
]

[dependency-groups]
dev = ["pytest", "ruff", "httpx"]

[tool.ruff]
target-version = "py313"
line-length = 100
