[project]
name = "lifeos-worker"
version = "0.1.0"
description = "LifeOS worker — Procrastinate (Postgres-backed, no Redis)"
requires-python = ">=3.13"
dependencies = [
  "procrastinate>=3.8",
  "psycopg[binary]>=3.2",
  "httpx>=0.27",
  "sqlalchemy[asyncio]==2.0.50",
  "pgvector==0.4.2",
  "openai>=1.54",
  "voyageai>=0.3",
  "boto3>=1.35",
  "cryptography>=43",
]
