[project]
name = "lifeos-worker"
version = "0.1.0"
description = "LifeOS worker — Procrastinate (Postgres-backed, no Redis)"
requires-python = ">=3.13"
dependencies = [
  "procrastinate>=3.8",
  "psycopg[binary]>=3.2",
  "httpx>=0.27",
]

[tool.uv]
package = false  # worker.py is a script run via --app=worker.app, not an installable package
